--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,17 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# Dependency directories
+# Node.js
 node_modules/
-jspm_packages/
-
-# Optional npm cache directory
-.npm/
-
-# Optional REPL history
-.node_repl_history
-
-# dotenv environment variables file
+npm-debug.log*
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
 
-# Editor directories and files
-.vscode/
-*.sublime-project
-*.sublime-workspace
-.idea/
-
-# Build results
-build/
-dist/
-tmp/
-
-# OS generated files
+# Logs and temporary files
+*.log
+*.tmp
 .DS_Store
-.Trashes
 Thumbs.db
+
+# VSCode
+.vscode/
+
+# Build artifacts (if any are introduced later)
+dist/
+build/
